style.css
@font-face {
  font-family: "Karla";
  src: url("assets/fonts/Karla-VariableFont_wght.ttf") format("truetype");
  font-weight: 400 700;
}

:root {
  --pale-green: hsl(148, 38%, 91%);
  --green: hsl(169, 82%, 27%);
  --red: hsl(0, 66%, 54%);
  --white: hsl(0, 0%, 100%);
  --light-teal: hsl(186, 15%, 59%);
  --dark-teal: hsl(187, 24%, 22%);

  --ff-base: "Karla", sans-serif;
}

@layer reset {
  *,
  ::before,
  ::after {
    box-sizing: border-box;
  }
  body {
    accent-color: var(--green);
    font-size: 1rem;
    font-family: var(--ff-base);
    line-height: 1.6;
    background-color: var(--pale-green);
  }

  h1,
  h2,
  p {
    margin-block: 0;
  }

  input,
  button,
  textarea {
    font: inherit;
  }
}

@layer layout {
  .span-all {
    grid-column: 1 / -1;
  }
}

@layer form {
  .contact {
    background-color: var(--white);
    padding: 2rem;
    border-radius: 1rem;
    max-inline-size: 700px;
    margin-inline: auto;
  }
  form {
    display: grid;
    gap: 1rem;

    @media (width > 500px) {
      grid-template-columns: repeat(2, 1fr);
    }
  }

  fieldset {
    padding: 0;
    border: 0;

    display: grid;
    gap: inherit;
    grid-template-columns: inherit;
  }

  textarea {
    resize: block;
    box-sizing: content-box;
    height: 3lh;
  }
  .form-group {
    display: grid;
    /* when we add error message content below the field then the next field will expand to match the size of this field as error msg is added. so to stick to size of the content in the box , the below property helps. u can understand better by commenting the below line and play with form to know the difference. */
    grid-auto-rows: min-content;
  }

  fieldset:has([required]) legend,
  .form-group:has(:not([type="radio"])[required]) label {
    display: flex;
    gap: 1ch;
    &::after {
      content: "*";
      color: var(--green);
    }
  }

  input,
  textarea,
  .form-group:has([type="radio"]) {
    border: 1px solid var(--dark-teal);
    border-radius: 6px;
    padding: 0.75em 1.5em;
    &:focus-visible {
      outline-color: var(--green);
    }
  }

  [type="radio"],
  [type="checkbox"] {
    width: 1rem;
  }

  .form-group:has([type="radio"], [type="checkbox"]) {
    display: flex;
    gap: 1ch;
  }

  .form-group:has([type="radio"]) {
    position: relative;
    label::after {
      content: "";
      position: absolute;
      inset: 0;
    }
  }

  .form-group:has([type="radio"]:checked) {
    background-color: var(--pale-green);
    border-color: var(--green);
  }

  button {
    background-color: var(--green);
    color: var(--white);
    border: 0;
    padding: 0.75em 1.5em;
    border-radius: 6px;

    &:hover,
    &:focus-visible {
      background-color: var(--dark-teal);
    }
  }

  input:user-invalid {
    border-color: var(--red);
  }
  .error-message {
    color: var(--red);
  }
  .error-message:empty {
    display: none;
  }
}

